--- a/Project/templates/cards.css
+++ b/Project/templates/cards.css
@@ -1,157 +1,60 @@
-.card-flip>div {
-    backface-visibility: hidden;
-    transition: transform 300ms;
-    transition-timing-function: linear;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    display: flex;
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.card-front {
-    transform: rotateY(0deg);
+div {
+  width: 100%;
+  height: 100%;
 }
 
-.card-back {
-    transform: rotateY(180deg);
-    position: absolute;
-    top: 0;
-}
-
-.card-flip .card-front {
-    transform: rotateY(0deg);
-}
-
-.card-flip .card-back {
-    transform: rotateY(-180deg);
+.container {
+  margin: 20px;
+  width: 500px;
+  height: 500px;
+  perspective: 1000px;
 }
 
 .card {
-    border: none;
-    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-    overflow: hidden;
-    border-radius: 20px;
-    min-height: 450px;
-    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+  transition: transform 2s;
+  transform-style: preserve-3d;
+  cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .card {
-        min-height: 350px;
-    }
-}
-
-@media (max-width: 420px) {
-    .card {
-        min-height: 300px;
-    }
-}
-
-.card.card-has-bg {
-    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-    background-size: 120%;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.card.card-has-bg:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: inherit;
-    -webkit-filter: grayscale(1);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
-    filter: grayscale(100%);
-}
-
-.card.card-has-bg:hover {
-    transform: scale(0.98);
-    box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
-    background-size: 130%;
-    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.card.card-has-bg:hover .card-img-overlay {
-    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    background: #234f6d;
-    background: linear-gradient(0deg, rgba(4, 69, 114, 0.5) 0%, #044572 100%);
-}
-
-.card .card-footer {
-    background: none;
-    border-top: none;
-}
-
-.card .card-footer .media img {
-    border: solid 3px rgba(234, 95, 0, 0.3);
-}
-
-.card .card-meta {
-    color: orange;
-}
-
-.card .card-body {
-    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-
-/* .card:hover {
-    cursor: pointer;
-    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.card:hover .card-body {
-    margin-top: 30px;
-    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    transform: rotateY(180deg);
-}
-
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-} */
-
-.button {
-    display: block;
-    margin: 0;
-    position: absolute;
-    transform: translateX(85px);
-    width: 100;
-    top: 50%;
-}
-
-.button-review {
-    top: 50%;
-}
-
-.button-edit {
-    top: 60%;
-}
-
-.button-delete {
-    top: 70%;
-}
-
-
-/* .card:hover .button {
-    display: block;
-} */
-
-
-/* .review-button {
-  margin: 0;
+.front,
+.back {
   position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-} */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  backface-visibility: hidden;
+}
 
-.card .card-img-overlay {
-    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    background: #234f6d;
-    background: linear-gradient(0deg, rgba(35, 79, 109, 0.3785889356) 0%, #455f71 100%);
+.front {
+  border: 2px solid black;
+  /* background: url("http://placehold.it/250x250"); */
+}
+
+.front:hover {
+  bottom: 2px;
+  left: 2px;
+  box-shadow: 0px 0px 20px 1px #000;
+}
+
+.back {
+  border: 2px solid black;
+  /* background: url("http://placehold.it/100x100"); */
+  transform: rotateY(180deg);
+}
+
+.back:hover {
+  bottom: 2px;
+  right: 2px;
+  box-shadow: 0px 0px 20px 1px #000;
 }
