--- a/Project/templates/cards.css
+++ b/Project/templates/cards.css
@@ -18,12 +18,12 @@
     top: 0;
 }
 
-.card-flip .card-front {
-    transform: rotateY(0deg);
+.card-flip:hover .card-front {
+    transform: rotateY(-180deg);
 }
 
-.card-flip .card-back {
-    transform: rotateY(-180deg);
+.card-flip:hover .card-back {
+    transform: rotateY(0deg);
 }
 
 .card {
@@ -60,7 +60,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0;
+    left: -10px;
     background: inherit;
     -webkit-filter: grayscale(1);
     -moz-filter: grayscale(100%);
@@ -154,4 +154,11 @@
     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
     background: #234f6d;
     background: linear-gradient(0deg, rgba(35, 79, 109, 0.3785889356) 0%, #455f71 100%);
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
