--- a/Project/static/cards.css
+++ b/Project/static/cards.css
@@ -60,7 +60,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    left: -10px;
+    left: 0;
     background: inherit;
     -webkit-filter: grayscale(1);
     -moz-filter: grayscale(100%);
@@ -69,14 +69,14 @@
     filter: grayscale(100%);
 }
 
-.card.card-has-bg:hover {
+.card .card-has-bg:hover {
     transform: scale(0.98);
     box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
     background-size: 130%;
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-.card.card-has-bg:hover .card-img-overlay {
+.card .card-has-bg:hover .card-img-overlay {
     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
     background: #234f6d;
     background: linear-gradient(0deg, rgba(4, 69, 114, 0.5) 0%, #044572 100%);
@@ -117,11 +117,10 @@
 
 .button {
     display: block;
-    margin: 0;
-    position: absolute;
-    transform: translateX(85px);
-    width: 100;
-    top: 50%;
+    margin: 10;
+    width: 120;
+    padding: 10px;
+    transform: translateX(50%);
 }
 
 .button-review {
@@ -134,6 +133,10 @@
 
 .button-delete {
     top: 70%;
+}
+
+.button-next {
+    top: 0%
 }
 
 
@@ -160,5 +163,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    width: 800px;
+    max-width: 1080px;
+}
+
+.upper {
+    height: 20vh;
+}
+
+.middle {
+    height: 60vh;
+}
+
+.lower {
+    height: 20vh;
+}
+
+h1 {
+    text-align: center;
+}
+
+h5 {
+    color: #343a40;
+    /* display: none */
 }
