--- a/Project/static/deck.css
+++ b/Project/static/deck.css
@@ -87,36 +87,36 @@ body {
 .card:hover .card-body {
     margin-top: 30px;
     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-  transform: rotateY(180deg);
 }
 
 .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
-.button{
-    display: block;
+.button {
+    display: none;
     margin: 0;
     position: absolute;
     transform: translateX(85px);
     width: 100
 }
 
-.button-review{
+.button-review {
     top: 50%;
 }
 
-.button-edit{
+.button-edit {
     top: 60%;
 }
 
-.button-delete{
+.button-delete {
     top: 70%;
 }
 
-.card:hover .button{
+.card:hover .button {
     display: block;
 }
+
 
 /* .review-button {
   margin: 0;
