--- a/Project/templates/cards.html
+++ b/Project/templates/cards.html
@@ -40,9 +40,9 @@
             </div>
             <div class="col-md-4">
                 <h2>Review :</h2><br><br>
-                <button type="button" class="button btn btn-primary button-review">EASY</button>
-                <button type="button" class="button btn btn-primary button-edit">MEDIUM</button>
-                <button type="button" class="button btn btn-primary button-delete">DIFFICULT</button>
+                <button type="button" class="button btn btn-primary button-review"><a href="/deck/{{userName}}/{{deck_no}}/review/{{card_no}}/easy/next/{{card_no+1}}">EASY</a></button>
+                <button type="button" class="button btn btn-primary button-edit"><a href="/deck/{{userName}}/{{deck_no}}/review/{{card_no}}/medium/next/{{card_no+1}}">MEDIUM</a></button>
+                <button type="button" class="button btn btn-primary button-delete"><a href="/deck/{{userName}}/{{deck_no}}/review/{{card_no}}/difficult/next/{{card_no+1}}">DIFFICULT</a></button>
 
             </div>
         </div>
