--- a/Project/static/deck.css
+++ b/Project/static/deck.css
@@ -136,3 +136,13 @@ body {
     padding-top: 25px;
     padding-bottom: 25px;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
+    color: white;
+}
