--- a/Project/static/cards.css
+++ b/Project/static/cards.css
@@ -78,7 +78,7 @@
 
 .card .card-has-bg:hover .card-img-overlay {
     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    background: #234f6d;
+    background: red;
     background: linear-gradient(0deg, rgba(4, 69, 114, 0.5) 0%, #044572 100%);
 }
 
