--- a/Project/templates/cards.html
+++ b/Project/templates/cards.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container upper">
-        <h1>Deck : {{deck_name}}</h1>
+        <h1 class="deckname">Deck : {{deck_name}}</h1>
     </div>
     <div class="container middle">
         <div class="row">
@@ -45,11 +45,6 @@
                 <button type="button" class="button btn btn-primary button-delete"><a href="/deck/{{userName}}/{{deck_no}}/review/{{card_no}}/difficult/next/{{card_no+1}}">DIFFICULT</a></button>
 
             </div>
-        </div>
-    </div>
-    <div class="container lower">
-        <div class="row">
-            <button type="button" class="button btn btn-primary button-review">NEXT</button>
         </div>
     </div>
 </body>
